# ChangeLog for virtual/perl-MIME-Base64
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/virtual/perl-MIME-Base64/ChangeLog,v 1.18 2009/03/13 21:03:28 tove Exp $

  13 Mar 2009; Torsten Veller <tove@gentoo.org>
  -perl-MIME-Base64-3.05.ebuild:
  Cleanup

  04 Mar 2009; Peter Alfredsen <loki_val@gentoo.org>
  perl-MIME-Base64-3.07.ebuild:
  Update dependency to do >=perl-5.8.8 instead of ~perl-5.8.8 w.r.t. bug
  261135.

  07 Jun 2008; Alexis Ballier <aballier@gentoo.org>
  perl-MIME-Base64-3.07.ebuild:
  keyword ~sparc-fbsd

  25 Oct 2006; Michael Cummings <mcummings@gentoo.org>
  perl-MIME-Base64-3.05.ebuild:
  Cleaning up deps

  20 Oct 2006; Michael Cummings <mcummings@gentoo.org>
  -perl-MIME-Base64-2.12.ebuild, -perl-MIME-Base64-2.20.ebuild,
  -perl-MIME-Base64-3.00.ebuild, -perl-MIME-Base64-3.01.ebuild:
  Cleaning up old ebuilds

  04 Sep 2006; Joshua Kinard <kumba@gentoo.org>
  perl-MIME-Base64-3.07.ebuild:
  Marked stable on mips.

  18 Jul 2006; Bryan Østergaard <kloeri@gentoo.org>
  perl-MIME-Base64-3.07.ebuild:
  Stable on alpha.

  18 Jun 2006; Bryan Østergaard <kloeri@gentoo.org>
  perl-MIME-Base64-3.07.ebuild:
  Stable on ia64.

  26 May 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  perl-MIME-Base64-3.07.ebuild:
  Stable on amd64 wrt bug #133989

  25 May 2006; Guy Martin <gmsoft@gentoo.org> perl-MIME-Base64-3.07.ebuild:
  Stable on hppa.

  24 May 2006; Michael Hanselmann <hansmi@gentoo.org>
  perl-MIME-Base64-3.07.ebuild:
  Stable on ppc.

  23 May 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  perl-MIME-Base64-3.07.ebuild:
  Stable on x86 wrt bug #133989.

  23 May 2006; <mcummings@gentoo.org> perl-MIME-Base64-3.07.ebuild:
  Marking stable sparc, bug 133989

  23 May 2006; Markus Rothe <corsair@gentoo.org>
  perl-MIME-Base64-3.07.ebuild:
  Stable on ppc64; bug #133989

  24 Apr 2006; Diego Pettenò <flameeyes@gentoo.org>
  perl-MIME-Base64-3.07.ebuild:
  Add ~x86-fbsd keyword.
