@@ -1,3 +1,4 @@
 EBUILD perl-MIME-Base64-3.07.ebuild 608 RMD160 816c692040d2bba8e13c0d9fd717ac8f9d9259b4 SHA1 6e7560b65a3d0bcd121a507fb5d8b2b6b1a57c0f SHA256 07c40fec9ee72c4f5771a92e0fe2e3d956a6cce73e1c10969846aee31f39b090
-MISC ChangeLog 2651 RMD160 1c971f2839965c7826e2a15613ac1ef1c4c9d937 SHA1 1a25b0d8b2aa13ace3d7da3d2dff5b15807372f1 SHA256 d1ada970912ba799c60e9893a9b890319e7ab25d095e3cf2c7b0222be1565df5
+EBUILD perl-MIME-Base64-3.08.ebuild 574 RMD160 3f9e30bab32d36391b0c4f0740554d5357c9f122 SHA1 f16535ab09847318eda252941054fa0414947830 SHA256 0f0d68658379f8b15a2a044b421ae94e2fcd61d06c4e90514cf2bdc286217590
+MISC ChangeLog 2786 RMD160 db379788636f74a38898cdc230c704fd5e0948e9 SHA1 0fbd7a47fc8eb29956d508198331579b482e5165 SHA256 7933274fa2368f6364c88111febe077078638b56590fc6431f35f8a6f2af882c
 MISC metadata.xml 305 RMD160 647980838c590f54441a053916ea629e53e551c0 SHA1 99ef1deeae9a934fb6e46cf5fc4a5fcb8379a74a SHA256 f05dbef15061919972882cab07057e102760a542beba17d131194091401cd7ca
