@@ -1,6 +1,12 @@
 # ChangeLog for virtual/perl-MIME-Base64
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/virtual/perl-MIME-Base64/ChangeLog,v 1.18 2009/03/13 21:03:28 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/virtual/perl-MIME-Base64/ChangeLog,v 1.19 2009/06/10 13:44:18 tove Exp $
+
+*perl-MIME-Base64-3.08 (10 Jun 2009)
+
+  10 Jun 2009; Torsten Veller <tove@gentoo.org>
+  +perl-MIME-Base64-3.08.ebuild:
+  Version bump
 
   13 Mar 2009; Torsten Veller <tove@gentoo.org>
   -perl-MIME-Base64-3.05.ebuild:
